--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Esta es mi pagina web, donde podras jugar a dividir.">
+  <meta name="author" content="icaito-ricode">
+  <meta name="keywords" content="Mi pagina, mi sitio, mi web">
 	<title>Juego de dividir</title>
 	<link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="img/favicon.png">
